Fixed upload preview overflow

--- a/public/clientuser/documentindex.css
+++ b/public/clientuser/documentindex.css
@@ -47,6 +47,12 @@
     height:100%;
 }
 
+.tableUploadPreview{
+    height:500px;
+    width:103%;
+    overflow-x:hidden;
+}
+
 
 .tableDocument thead th:first-child {
     border-top-left-radius: 10px;
